--- a/package.json
+++ b/package.json
@@ -1,25 +1,34 @@
 {
-  "name": "ahsan-portfolio",
-  "version": "1.0.0",
-  "description": "MERN Stack Portfolio website",
-  "main": "server.js",
-  "scripts": {
-    "test": "dev"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ahsannishad/MERN-Portfolio.git"
-  },
-  "keywords": [
-    "MERN",
-    "Website",
-    "Portfolio",
-    "website"
-  ],
-  "author": "Ahsan Nishad",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/ahsannishad/MERN-Portfolio/issues"
-  },
-  "homepage": "https://github.com/ahsannishad/MERN-Portfolio#readme"
+	"name": "ahsan-portfolio",
+	"version": "1.0.0",
+	"description": "MERN Stack Portfolio website",
+	"main": "server.js",
+	"scripts": {
+		"dev": "nodemon server.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/ahsannishad/MERN-Portfolio.git"
+	},
+	"keywords": [
+		"MERN",
+		"Website",
+		"Portfolio",
+		"website"
+	],
+	"author": "Ahsan Nishad",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/ahsannishad/MERN-Portfolio/issues"
+	},
+	"homepage": "https://github.com/ahsannishad/MERN-Portfolio#readme",
+	"dependencies": {
+		"dotenv": "^8.2.0",
+		"express": "^4.17.1",
+		"express-session": "^1.17.1",
+		"mongoose": "^5.11.4",
+		"passport": "^0.4.1",
+		"passport-local": "^1.0.0",
+		"passport-local-mongoose": "^6.0.1"
+	}
 }
