--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
 		"axios": "^0.21.0",
 		"bootstrap-icons": "^1.2.0",
 		"firebase": "^8.2.0",
+		"moment": "^2.29.1",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"react-notifications-component": "^3.0.3",
